--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>팀 혜안 QR prototype</title>
+        <title>팀 혜안 prototype</title>
         <link rel="stylesheet" href="style.css">
         <script>
             /* 버튼 클릭 시 오디오 재생 */
