--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 window.open('','_self').close();
             }
         </script>
-        
+            <!--favicon.ico 404 오류 해결 -->
+        <link rel="shortcut icon" href="#">
+
     </head>
 
     <body>
