--- a/index3.html
+++ b/index3.html
@@ -18,6 +18,9 @@
             }
         </script>
         
+            <!-- favicon.ico 404 오류 해결 -->
+        <link rel="shortcut icon" href="#">
+        
     </head>
 
     <body>
@@ -32,7 +35,7 @@
 
             <button id="WinClose_btn" type="button" onclick="WinClose();">나가기</button>
 
-            <h1><br>화면 중앙 재생을 터치하면 제품명을 읽어드립니다.<br><br>나가기를 희망하면 화면 하단을 눌러주세요.</h1>
+            <h1><br><br>화면 중앙 재생을 터치하면 제품명을 읽어드립니다.<br><br>나가기를 희망하면 화면 하단을 눌러주세요.</h1>
 
         <!-- 페이지 이동 버튼 -->        
             <!--
